<resources>
    <string name="app_name">Control Your Home</string>

    <string name="new_account">Don\'t have an Account?</string>
    <string name="sign_up"><b>Sign up</b></string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="user_created_failed">User created failed</string>
    <string name="error_password_same">Passwords are not the same</string>
    <string name="error_empty">It can\'t be empty</string>
    <string name="temp">Temp</string>
    <string name="drop">drop</string>
    <string name="lumen">lumen</string>
    <string name="back">back</string>
    <string name="control_room">Control Room:</string>
    <string name="living_room">Living room</string>
    <string name="kitchen">Kitchen</string>
    <string name="bed_room">Bed room</string>
    <string name="guest_room">Guest room</string>
    <string name="img_user">img_user</string>
    <string name="control_device">Control Device:</string>
    <string name="lamp">Lamp</string>
    <string name="TV">TV</string>
    <string name="motion_sensor">Motion Sensor</string>
    <string name="fan">Fan</string>
    <string name="time">11:30 am</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_time">Start Time</string>
    <string name="info_temp">%d C</string>
    <string name="info_hum">%d %%</string>
    <string name="info_lum">%d lm</string>
    <string name="test">%d:%d</string>
    <string name="btn_on_off_status_key">btn_on_off_status_key</string>
    <string name="tv_start_time_hours_key">tv_start_time_hours_key</string>
    <string name="tv_start_time_minutes_key">tv_start_time_minutes_key</string>
    <string name="tv_end_time_hours_key">tv_end_time_hours_key</string>
    <string name="tv_end_time_minutes_key">tv_end_time_minutes_key</string>
    <string name="tv_days_days_key">tv_days_days_key</string>
    <string name="check">check</string>
    <string name="set_time">Set Time</string>
    <string name="array_checkDays_size">checkDays_size</string>
    <string name="array_checkDays_value">checkDays_%d</string>
    <string name="array_selected_day_size">selected_day_size</string>
    <string name="array_selected_day_value">selected_day_value_%d</string>
</resources>